--- a/auth-microservice/package.json
+++ b/auth-microservice/package.json
@@ -13,8 +13,11 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/node": "^18.0.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "node-oauth2-server": "^2.4.0",
-    "sequelize": "^6.21.0"
+    "sequelize": "^6.21.0",
+    "tedious": "^14.6.0"
   }
 }
