--- a/auth-microservice/package.json
+++ b/auth-microservice/package.json
@@ -13,6 +13,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
