--- a/auth-microservice/package.json
+++ b/auth-microservice/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
+    "@types/sequelize": "^4.28.13",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "node-oauth2-server": "^2.4.0",
     "sequelize": "^6.21.0",
     "tedious": "^14.6.0"
