--- a/auth-microservice/package.json
+++ b/auth-microservice/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
     "typescript": "^4.7.4"
   },
   "dependencies": {
@@ -19,6 +20,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
     "node-oauth2-server": "^2.4.0",
     "sequelize": "^6.21.0",
     "tedious": "^14.6.0"
