--- a/api-user-details/package.json
+++ b/api-user-details/package.json
@@ -10,12 +10,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.13",
     "typescript": "^4.7.4"
   },
   "dependencies": {
     "@types/node": "^18.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
     "node-oauth2-server": "^2.4.0",
     "sequelize": "^6.21.0",
     "tedious": "^14.6.0"
