--- a/api-user-details/package.json
+++ b/api-user-details/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "auth-microservice",
+  "name": "user-detail-microservice",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node ./src/app.ts"
   },
   "keywords": [],
   "author": "",
