--- a/auth-microservice/package.json
+++ b/auth-microservice/package.json
@@ -14,9 +14,11 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
     "@types/sequelize": "^4.28.13",
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
