--- a/view-web-app/package.json
+++ b/view-web-app/package.json
@@ -25,6 +25,7 @@
     "npm-run-all": "^4.1.5",
     "typescript": "~4.7.4",
     "vite": "^2.9.12",
+    "vue-cli-plugin-vuetify": "~2.5.1",
     "vue-tsc": "^0.38.1"
   }
 }
