Update docker for the user-details-microservice and cleanup

--- a/user-details-microservice/compose.yml
+++ b/user-details-microservice/compose.yml
@@ -3,13 +3,11 @@ version: "3.8"
 services:
   user-service-db:
     container_name: user-service-db
-    image: mcr.microsoft.com/mssql/server
-    working_dir: /scripts
-    ports:
-      - 1433:1433
+    build:
+      context: .
+      dockerfile: ./dockerfiles/mssql/Dockerfile
     volumes:
-      - ./mssql/data:/var/lib/mssqlql/data
-      - ./mssql/scripts:/scripts
+      - ./mssql/data:/var/opt/mssql
     environment:
       - ACCEPT_EULA=Y
       - SA_PASSWORD=${USER_SERVICE_DB_PASSWORD}
@@ -18,18 +16,18 @@ services:
       - user-microservice-network
     command: bash -c "./entrypoint.sh"
   user-service-api:
-    image: node
     container_name: user-service-api
-    working_dir: /app
+    build:
+      context: .
+      dockerfile: ./dockerfiles/node-app/Dockerfile
     depends_on:
       - user-service-db
+    restart: on-failure
     ports:
       - 8080:8080
-    volumes:
-      - ./:/app
     networks:
       - user-microservice-network
-    command: bash -c "npm install -g ts-node && npm install && ts-node src/app.ts"
+    command: bash -c "ts-node src/app.ts"
 
 networks:
   user-microservice-network:
