--- a/api-catalog/package.json
+++ b/api-catalog/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "typescript": "^4.7.4"
   },
@@ -18,6 +19,7 @@
     "@types/node": "^18.0.0",
     "aws": "^0.0.3-2",
     "aws-sdk": "^2.1160.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "joi": "^17.6.0",
