--- a/auth-microservice/package.json
+++ b/auth-microservice/package.json
@@ -14,10 +14,12 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/amqplib": "^0.8.2",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
     "@types/sequelize": "^4.28.13",
+    "amqplib": "^0.10.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
