--- a/user-details-microservice/package.json
+++ b/user-details-microservice/package.json
@@ -15,7 +15,9 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/amqplib": "^0.8.2",
     "@types/node": "^18.0.0",
+    "amqplib": "^0.10.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "joi": "^17.6.0",
