--- a/api-catalog/package.json
+++ b/api-catalog/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "mongoose": "^6.4.0",
+    "multer": "^1.4.5-lts.1",
     "tedious": "^14.6.0"
   }
 }
