--- a/user-details-microservice/package.json
+++ b/user-details-microservice/package.json
@@ -15,6 +15,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@joi/date": "^2.1.0",
     "@types/amqplib": "^0.8.2",
     "@types/node": "^18.0.0",
     "amqplib": "^0.10.0",
