--- a/view-web-app/package.json
+++ b/view-web-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "form-data": "^4.0.0",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
   },
