--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "CorbeilleJWT",
+  "name": "api-gateway",
   "version": "1.0.0",
   "description": "",
-  "main": "server.ts",
+  "main": "app.ts",
   "scripts": {
     "start": "ts-node server.ts"
   },
@@ -10,13 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express-http-proxy": "^1.6.3",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-http-proxy": "^1.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.5",
-    "nodemon": "^2.0.16",
+    "nodemon": "^1.3.3",
     "ts-node": "^10.8.1"
   },
   "devDependencies": {
