--- a/auth-microservice/package.json
+++ b/auth-microservice/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "@types/amqplib": "^0.8.2",
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
     "@types/sequelize": "^4.28.13",
     "amqplib": "^0.10.0",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
