--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,4 +1,4 @@
 FROM node
 WORKDIR /app
 COPY . /app
-RUN npm install -g ts-node && npm install
+RUN npm install -g ts-node && npm install && npm run gen-doc
