--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "start": "ts-node server.ts"
+    "start": "ts-node server.ts",
+    "gen-doc": "node swagger.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.12",
     "@types/express-http-proxy": "^1.6.3",
+    "@types/swagger-ui-express": "^4.1.3",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
@@ -26,6 +28,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/node": "^17.0.40"
+    "@types/node": "^17.0.40",
+    "swagger-autogen": "^2.21.3",
+    "swagger-ui-express": "^4.4.0"
   }
 }
