--- a/compose.yml
+++ b/compose.yml
@@ -49,8 +49,6 @@ services:
       - auth-service-db
       - rabbitmq
     restart: on-failure
-    ports:
-      - ${AUTH_SERVICE_API_PORT}:${AUTH_SERVICE_API_PORT}
     networks:
       - auth-microservice-network
       - rabbitmq-network
@@ -60,10 +58,10 @@ services:
   user-service-db:
     container_name: user-service-db
     build:
-      context: ./user-details-microservice
+      context: ./user-microservice
       dockerfile: ./dockerfiles/mssql/Dockerfile
     volumes:
-      - ./user-details-microservice/mssql/data:/var/opt/mssql/data
+      - ./user-microservice/mssql/data:/var/opt/mssql/data
     environment:
       - ACCEPT_EULA=Y
       - SA_PASSWORD=${USER_SERVICE_DB_PASSWORD}
@@ -76,7 +74,7 @@ services:
   user-service-api:
     container_name: user-service-api
     build:
-      context: ./user-details-microservice
+      context: ./user-microservice
       dockerfile: ./dockerfiles/node-app/Dockerfile
     env_file:
         - .env
@@ -84,8 +82,6 @@ services:
       - user-service-db
       - rabbitmq
     restart: on-failure
-    ports:
-      - ${USER_SERVICE_API_PORT}:${USER_SERVICE_API_PORT}
     networks:
       - user-microservice-network
       - rabbitmq-network
