--- a/view-web-app/package.json
+++ b/view-web-app/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.22.0",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
   },
