--- a/compose.yml
+++ b/compose.yml
@@ -87,9 +87,24 @@ services:
       - rabbitmq-network
       - app-api-network
     command: bash -c "ts-node src/app.ts"
+  # =============== ORDER MICROSERVICE ===============
+  order-service-db:
+    container_name: order-service-db
+    image: mongo
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${ORDER_SERVICE_DB_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${ORDER_SERVICE_DB_PASSWORD}
+      - MONGO_INITDB_DATABASE=${ORDER_SERVICE_DB_NAME}
+    volumes:
+      - ./user-microservice/mongo/data:/data/db
+    ports:
+      - 27018:27017
+    networks:
+      - order-microservice-network
 
 networks:
   rabbitmq-network:
   app-api-network:
   auth-microservice-network:
   user-microservice-network:
+  order-microservice-network:
