--- a/view-web-app/package.json
+++ b/view-web-app/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.22.0",
+    "bootstrap-vue-3": "^0.1.13",
     "form-data": "^4.0.0",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
