--- a/order-microservice/package.json
+++ b/order-microservice/package.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
+    "@types/express-validator": "^3.0.0",
     "@types/mongoose": "^5.11.97",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "mongoose": "^6.4.0"
   }
 }
