--- a/view-web-app/package.json
+++ b/view-web-app/package.json
@@ -15,6 +15,7 @@
     "bootstrap-vue": "^2.22.0",
     "bootstrap-vue-3": "^0.1.13",
     "form-data": "^4.0.0",
+    "leaflet": "^1.8.0",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
   },
