--- a/compose.yml
+++ b/compose.yml
@@ -135,6 +135,8 @@ services:
     depends_on:
       - catalog-service-db
       - rabbitmq
+    ports:
+      - 8080:8080
     restart: on-failure
     networks:
       - catalog-microservice-network
