--- a/view-web-app/package.json
+++ b/view-web-app/package.json
@@ -19,7 +19,8 @@
     "leaflet": "^1.8.0",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
