--- a/order-microservice/package.json
+++ b/order-microservice/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/amqplib": "^0.8.2",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
     "typescript": "^4.7.4"
@@ -18,6 +19,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express-validator": "^3.0.0",
     "@types/mongoose": "^5.11.97",
+    "amqplib": "^0.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
