--- a/view-web-app/package.json
+++ b/view-web-app/package.json
@@ -13,6 +13,7 @@
     "@vuepic/vue-datepicker": "^3.2.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
     "bootstrap-vue": "^2.22.0",
     "bootstrap-vue-3": "^0.1.13",
     "form-data": "^4.0.0",
