--- a/delivery-microservice/package.json
+++ b/delivery-microservice/package.json
@@ -18,6 +18,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express-validator": "^3.0.0",
     "@types/mongoose": "^5.11.97",
+    "amqplib": "^0.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
