--- a/delivery-microservice/package.json
+++ b/delivery-microservice/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/amqplib": "^0.8.2",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
     "typescript": "^4.7.4"
