--- a/kubernetes/azure-api-gateway.yaml
+++ b/kubernetes/azure-api-gateway.yaml
@@ -18,11 +18,11 @@ spec:
       - name: api-gateway
         image: cesieatsimages.azurecr.io/api-gateway
         ports:
-        - containerPort: 4000
+        - containerPort: 80
         command: ["bash", "-c", "ts-node src/app.ts"]
         env:
         - name: API_GATEWAY_PORT
-          value: "4000"
+          value: "80"
         - name: USE_HOST_AS_FULL_URL
           value: "true"
         - name: USER_SERVICE_API_HOST
@@ -40,6 +40,21 @@ spec:
             configMapKeyRef:
               name: config-map
               key: order-service-api-host
+        - name: CATALOG_SERVICE_API_HOST
+          valueFrom:
+            configMapKeyRef:
+              name: config-map
+              key: catalog-service-api-host
+        - name: DELIVERY_SERVICE_API_HOST
+          valueFrom:
+            configMapKeyRef:
+              name: config-map
+              key: delivery-service-api-host
+        - name: NOTIFICATION_SERVICE_API_HOST
+          valueFrom:
+            configMapKeyRef:
+              name: config-map
+              key: notification-service-api-host
       imagePullSecrets:
       - name: acr-secret
 ---
@@ -48,10 +63,27 @@ kind: Service
 metadata:
   name: api-gateway-service
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: api-gateway
   ports:
-    - protocol: TCP
-      port: 4000
-      targetPort: 4000
+    - port: 80
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: api-gateway
+  annotations:
+    kubernetes.io/ingress.class: addon-http-application-routing
+spec:
+  rules:
+  - host: api-gateway.e073562a5ba0470182a1.northeurope.aksapp.io
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service: 
+            name: api-gateway-service
+            port: 
+              number: 80
