--- a/kubernetes/configs/secret.yaml
+++ b/kubernetes/configs/secret.yaml
@@ -4,7 +4,8 @@ metadata:
   name: secret
 type: Opaque
 data:
+  jwt-access-secret: a2RnazM5Ogo=
+  jwt-refresh-secret: a2RnazN2bGQ6OToK
   db-password: cGtTb2RtcDQ1bmk=
-
-
-
+  mongo-username: YWRtaW4K
+  mongo-dbname: bWFpbkRhdGFiYXNlCg==
